Mejoras en anexos

--- a/Documentación/tex/C_Diseno.tex
+++ b/Documentación/tex/C_Diseno.tex
@@ -3,16 +3,15 @@
 \section{Introducción}
  Para este apartado se presentarán los diseños que se han seguido para el desarrollo de la aplicación.
  
-\section{Diseño de datos}
 
 \section{Diseño procedimental}
 En la figura  \ref{fig:Diagrama} se muestra un diagrama de flujo, en el que se puede observar el comportamiento básico de la aplicación. Para crear el diagrama se ha usado la herramienta online Draw.io\footnote{\url{https://app.diagrams.net/}}.
 \imagen{Diagrama}{Diagrama de flujo del funcionamiento básico de la aplicación.}
 
 \section{Diseño arquitectónico}
-La aplicación al ser construida tendrá por defecto la arquitectura predefinida de Unity. A esta se le añadirá la de Vuforia que sera un complemento de la de Unity.
+La aplicación al ser construida tendrá por defecto la arquitectura predefinida de Unity. A esta se le añadirá la de Vuforia que sera un complemento a la de Unity.
 
-También formarán parte del diseño el sistema operativo del dispositivo y la cámara. La cámara será la encargada de recoger la señal de entrada de vídeo, esta será procesado por el sistema operativo para su uso en la aplicación. La capa de Unity y vuforia al detectar la señal de vídeo comenzará .... la parte de unity será la encargada de ejecutar los scripts... mientras que la de Vuforia será la que detecta los target......
+También formarán parte del diseño el sistema operativo del dispositivo y la cámara. La cámara será la encargada de recoger la señal de entrada de vídeo, esta será procesado por el sistema operativo para su uso en la aplicación. La capa de Unity y vuforia al detectar la señal de vídeo comenzará .... la parte de Unity será la encargada de ejecutar los scripts... mientras que la de Vuforia será la que detecta los target......
 .
 .
 .
@@ -22,13 +21,17 @@ También formarán parte del diseño el sistema operativo del dispositivo y la c
 
 En las siguientes imágenes se pueden ver, el prototipo de interfaz pensado para la aplicación. 
 
-En las figuras \ref{fig:Interfaz/page1}, \ref{fig:Interfaz/page2} y \ref{fig:Interfaz/page2_2} se muestra un prototipo de los menús de la aplicación. En la segunda, se puede escoger diferentes modos de juego, por el momento en esta aplicación unicamente se está desarrollando un modo de juego. 
+En las figuras \ref{fig:Anexos/Interfaz/page1}, \ref{fig:Anexos/Interfaz/page2} y \ref{fig:Anexos/Interfaz/page2_2} se muestra un prototipo de los menús de la aplicación. En la segunda, se puede escoger diferentes modos de juego, por el momento en esta aplicación unicamente se está desarrollando un modo de juego. 
 Otra posibilidad para los menús, sería integrarlos por realidad aumenta en el MergeCube, teniendo que girarle y jugar con él para navegar por el menú.
 
-En las figuras \ref{fig:Interfaz/page3} y \ref{fig:Interfaz/page4}, se muestra un prototipo de la interfaz del juego. Tendríamos botones para seleccionar las diferentes herramientas posibles en la parte inferior. Y en la parte superior una barra de progreso, para indicar el progreso de cada fase. Para regresar al menú principal se podría usar los botones del terminal o añadir uno a la interfaz también.
-\imagenPeque{Interfaz/page1}{Prototipo del menú principal de la aplicación.}
+En las figuras \ref{fig:Anexos/Interfaz/page3} y \ref{fig:Anexos/Interfaz/page4}, se muestra un prototipo de la interfaz del juego. Tendríamos botones para seleccionar las diferentes herramientas posibles en la parte inferior. Y en la parte superior una barra de progreso, para indicar el progreso de cada fase. Para regresar al menú principal se podría usar los botones del terminal o añadir uno a la interfaz también.
 
-\imagenPeque{Interfaz/page2}{Prototipo del menú de juegos de la aplicación.}
-\imagenPeque{Interfaz/page2_2}{Prototipo del menú de tipos de plantas disponibles.}
-\imagenPeque{Interfaz/page3}{Prototipo de la interfaz en modo AR.}
-\imagenPeque{Interfaz/page4}{Prototipo de la interfaz en modo AR.}
+\imagenPeque{Anexos/Interfaz/page1}{Prototipo del menú principal de la aplicación.}
+
+\imagenPeque{Anexos/Interfaz/page2}{Prototipo del menú de juegos de la aplicación.}
+
+\imagenPeque{Anexos/Interfaz/page2_2}{Prototipo del menú de tipos de plantas disponibles.}
+
+\imagenPeque{Anexos/Interfaz/page3}{Prototipo de la interfaz en modo AR.}
+
+\imagenPeque{Anexos/Interfaz/page4}{Prototipo de la interfaz en modo AR.}
