--- a/Documentación/tex/D_Manual_programador.tex
+++ b/Documentación/tex/D_Manual_programador.tex
@@ -16,6 +16,11 @@ En este apartado se procederá a dar una breve explicación de la estructura que
 .2 Ejemplo/ Ejemplo de realidad aumentada.
 .3 Plant-test/ Ejemplo de realidad aumentada.
 .4 Assest/ Assests del proyecto.
+.5 Animation/ Animaciones usadas.
+.5 AssestsOfStore/ Assests gratuitos descargados de la tiende de unity.
+.5 Codigo/ Scripts usados.
+.5 Material/ Materiales.
+.5 Scenes/ Escenas de unity.
 .4 Library/ Librerías usadas en el proyecto.
 .4 Logs/ ...
 .4 obj/ ...
@@ -55,6 +60,9 @@ Dado que en el ejemplo realizado en Unity se utiliza Vuforia como herramienta de
 
 \section{Compilación, instalación y ejecución del proyecto}
 
-El proceso de instalación es sencillo. Una vez descargada la apk el el terminal, se procederá as u ejecución, el propio SO seguirá los pasos necesarios. La única intervención a resaltar, es posible que al tratar de instalar, nos pregunte si deseamos permitir la instalación de origen desconocido, esto se debe a que la apk no se encuentra oficialmente registrada el appstore. Una vez dados los permisos la instalación seguira normalmente.
+El proceso de instalación es sencillo. Una vez descargada la apk el el terminal, se procederá as u ejecución, el propio SO seguirá los pasos necesarios. La única intervención a resaltar, es posible que al tratar de instalar, nos pregunte si deseamos permitir la instalación de origen desconocido, esto se debe a que la apk no se encuentra oficialmente registrada el appstore. Una vez dados los permisos la instalación seguirá normalmente.
 
 \section{Pruebas del sistema}
+Las pruebas realizadas a la aplicación, se han realizado mediante pruebas manuales directamente en el dispositivo.
+
+Unity posee cualidades para realizar algunas preubas unitarias, pero de momento no he tenido tiempo para utilizarlas. 
