--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -32,5 +32,9 @@ En este modo, una vez que la cámara ya está activa, al apuntar el Mergecube, s
 
 En caso de tener seleccionado el modo de capturar target, la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador, una vez que tengamos un objetivo optimo que deseemos transformar en un target se deberá presionar el disparador.
 
-En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el mergecube. Cuando el agua colisione con el modelo proyectado en el mergecube, la barra de progreso subirá. 
+En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el mergecube. Cuando el agua colisione con el modelo proyectado en el mergecube, la barra de progreso subirá hasta completarse. El segundo elemento, se trata de un bote de fertilizante, al pulsarse saldra en la pantalla un botón que al ser presionado saldra delante como si se hubiese lanzado contra el mergecube.
+Para completar una fase es necesario haber completado ambos casos anteriores....
+
+
+ 
 
