--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -437,11 +437,17 @@ D. Álvar Arnaiz González
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-En este primer apartado se hace una \textbf{breve} presentación del tema que se aborda en el proyecto.
+En este proyecto se va ha realizar un estudio de diferentes herramientas de realidad aumentada actuales. Se compararan ...
+
+Para completar se realizará una aplicación orientada a la docencia, con una de las herramientas estudiadas previamente, en la que poner a prueba sus características. La idea de la aplicación es fomentar nuevas formas de aprendizaje mediante el uso de la realidad aumentada, el primer ejemplo desarrollado trata de ver el proceso de crecimiento de una planta.
+
+El apk de la aplicación esta disponible  en el repositorio.	
+enlace
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
+Realidad aumentada, Unity, Vuforia, Aplicación Android	
 Palabras separadas por comas que identifiquen el contenido del proyecto Ej: servidor web, buscador de vuelos, android \ldots
 \end{abstract}
 
