--- a/Documentación/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/tex/6_Trabajos_relacionados.tex
@@ -12,7 +12,7 @@ Son numerosos los trabajos y estudios que hoy en día se realizan respecto a las
 \section{Paginas Web}
 
 
-\subsection{Niantic ¿?}
+\subsection{Niantic}
 Niantic~\footnote{\url{https://nianticlabs.com/es/}} se trata de una empresa centrada en el desarrollo de aplicaciones de realidad aumentada. Actualmente sus aplicaciones más conocidas son Ingress, Pokemon Go y HarryPotter wizzards unite.
 Pero aparte de estas aplicaciones también se dedican a la investigación y desarrollo de la realidad aumentada.
 
@@ -20,3 +20,7 @@ Uno de los destacados es del que hablan en la entrada <<Building experiences fro
 la capacidad de reconocer objetos del entorno para crear mejores sensaciones de profundidad. Para ello es necesario transformar una imagen 2D en un espacio 3D. Un ejemplo sería, en una imagen en la que salen varios arboles, si queremos poner un elemento de realidad aumentada, al moverse ese elemento no distinguiría el fondo de un árbol, por lo que la imagen AR siempre estará en un plano por encima. Pero si la imagen 2D pasa a ser un mapa 3D en el que se diferencian los arboles del fondo, sería posible que ese elemento de realidad aumentada pase de una forma realista detrás de los arboles. 
 \imagen{Trabajos_Relacionados/nianticAR}{ Representación del reconocimiento de profundidad.~\cite{nianticAR}}
 \url{https://nianticlabs.com/es/blog/building-experiences-from-the-ground-up/}
+
+
+
+\subsection{-}
