Aztualizado Estudio de viabilidad

--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -65,4 +65,9 @@
        note = "[Internet; descargado ]"
 }
 
-
+@misc{contingencias2020,
+	author = "AnemonaEspacial",
+	title = "Bases máximas y mínimas por contingencias comunes y tipos de cotización al Régimen General Seguridad Social para el año 2020",
+	url = "https://www.iberley.es/temas/bases-tipos-cotizacion-regimen-general-seguridad-social-ano-2020-11041",
+	note = "[Internet; descargado 25-junio-2020 ]"
+}
